--- a/html ödev 1/index.html
+++ b/html ödev 1/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sena Durmus</title>
 </head>
 <body>
     <h1>Sena Durmuş</h1>
     <h3>Hakkımda</h3>
     <p>Merhaba ben Sena,yazılım öğrenmeyek için çabalıyorum. :) </p>
 
-    
-    <H2>Sevdiğim Kitaplar</H2>
-    <h3>SİMYACI,SULTANI ÖLDÜRMEK, İFA....</h3>
+
+    <h2>İlgiAlanlarım</h2>
+    <h4> Film</h4>
+        <ul>
+            <li>Haryy Potter</li>
+           <a href="https://www.imdb.com/title/tt0133093/" target="_blanket"><li>Matrix</li></a> 
+        </ul>
+    <h4> Kİtap</h4>
+        <ul>
+            <li>Simyacı </li>
+            <li>Incognito</li>
+        </ul>
+
+   <h2>Sevdiğim Kitaplar</h2>
+
+   <img src="resim/kitap.jpg
+   " alt="kitabın kapağı">
+  
     <p>Romanları ve beyin temalı bilimsel kitapları seviyorum.</p>
+
 
 </body>
 </html>
